# Nexus-Logistics

./: .env  docker-compose.yml  h -u origin mastermain  main.py  pyproject.toml  readme
migrations/: env.py
migrations/versions/: 24ede0ba95b5_initial_migration_tenants_users_devices.py
src/: config.py  main.py
src/application/interfaces/: repository.py
src/application/services/: tenant_service.py  user_service.py
src/domain/: schemas.py  security.py
src/infrastracture/: logging.py
src/infrastracture/db/sql/: base.py  models.py  session.py
src/infrastracture/repositories/: base.py
src/presentation/api/: dependencies.py
src/presentation/api/v1/: tenants.py  users.py
